# pictriever

./: .gitignore  README.md  pyproject.toml  sandbox.py
pictriever/: image_scraper.py  site_image_scraper.py
tests/: test_retriever.py
