[tool.poetry]
name = "pictriever"
version = "0.1.0"
description = "Python library for image scraping from popular image gallery sites"
authors = ["tensor_kelechi <kelechichibuzo7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"
requests = "^2.32.3"
selenium = "^4.21.0"
tqdm = "^4.66.4"


[tool.poetry.group.tests.dependencies]
pytest = "^8.2.2"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
